modify images, scale down fonts on smaller screens, repair logo

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,6 +90,10 @@ p {
 padding-bottom: 2em;
 }
 
+h3 {
+	font-size: 1.8em;
+}
+
 h4 {
 	font-weight: bold;
 	letter-spacing: 0.6px;
@@ -121,13 +125,14 @@ a {
 	
 	/* logo */
 	img:first-child {
-		padding-bottom: 0.5em;
+		padding-top: 2em;
+		padding-bottom: 2em;
 	}
 
 	/* headline div */
 	div:nth-child(3) {
 		padding-top: 1.5em;
-		padding-bottom: 5em;
+		padding-bottom: 4em;
 	}
 	
 	/* image row div */
@@ -173,6 +178,20 @@ a {
 @media only screen and (max-width: 767px) {
 	.homepage-wrapper > .container {
 		width: 96%;
+	h3 {
+		font-size: 1.6em;
+	}
+	
+	/* headline div */
+	div:nth-child(3) {
+		padding-top: 1.5em;
+		padding-bottom: 2em;
+	}
+
+	.image-row {
+		padding-top: 0;
+	}
+
 	}	
 }
 
